force-app/main/default/objects/Trust_Center_Link__c/fields/Access_Count__c.field-meta.xml
<CustomField>
    <fullName>Access_Count__c</fullName>
    <label>Access Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
    <description>Number of times this link has been accessed. Incremented on each valid view.</description>
</CustomField>