force-app/main/default/objects/Trust_Center_Link__c/fields/Access_Tier__c.field-meta.xml
<CustomField>
    <fullName>Access_Tier__c</fullName>
    <label>Access Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
            <value>
                <fullName>Email_Gated</fullName>
                <label>Email Gated</label>
            </value>
            <value>
                <fullName>NDA_Required</fullName>
                <label>NDA Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Access tier determines what data is visible and whether user identification is required</description>
</CustomField>