force-app/main/default/objects/Trust_Center_Link__c/fields/Created_For__c.field-meta.xml
<CustomField>
    <fullName>Created_For__c</fullName>
    <label>Created For</label>
    <length>255</length>
    <type>Text</type>
    <description>Optional: Company or individual this link was created for (audit trail)</description>
</CustomField>