force-app/main/default/objects/Trust_Center_Link__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <required>true</required>
    <type>DateTime</type>
    <description>Link expiration timestamp. Validated on every access.</description>
</CustomField>