force-app/main/default/objects/Trust_Center_Link__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>SECURITY CONTROL: Link can be manually deactivated to immediately revoke access</description>
</CustomField>