force-app/main/default/objects/Trust_Center_Link__c/fields/Last_Accessed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Accessed_Date__c</fullName>
    <label>Last Accessed Date</label>
    <type>DateTime</type>
    <description>Timestamp of most recent link access</description>
</CustomField>