force-app/main/default/objects/Trust_Center_Link__c/fields/Link_Token__c.field-meta.xml
<CustomField>
    <fullName>Link_Token__c</fullName>
    <label>Link Token</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>UUID v4 token for shareable link. Generated via Crypto.getRandomUUID()</description>
</CustomField>